--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -40,6 +40,9 @@ jobs:
 
       - name: Build and push
         uses: docker/build-push-action@v6
+        permissions:
+          contents: read
+          packages: write
         with:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
